<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>lt.samerdokas</groupId>
    <artifactId>gdd-batch-app</artifactId>
    <version>1.2.2</version>
    <packaging>jar</packaging>
    
    <name>GDD Batch App</name>
    <description>A command line application for performing non-interactively batched or interactive inventory downloads</description>
    <developers>
        <developer>
            <name>${vendor}</name>
            <email>${maintainer}</email>
        </developer>
    </developers>
    <url>https://github.com/samerdokas/gdd-batch-app</url>
    <inceptionYear>2022</inceptionYear>
    
    <properties>
        <vendor>Tadas Samerdokas</vendor>
        <maintainer>tadas@samerdokas.lt</maintainer>
        <package.id>c3657091-0265-457b-8b46-bbe75dc3468b</package.id>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
        
        <java.version>19</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        
        <platform.specific.name>gdd-batch</platform.specific.name>
        <platform.specific.toggle.1 />
        <platform.specific.toggle.2 />
        <platform.specific.toggle.3 />
        <platform.specific.toggle.4 />
        <platform.specific.toggle.5 />
        <platform.specific.toggle.6 />
        <platform.specific.argument.1.name />
        <platform.specific.argument.1.value />
        <platform.specific.argument.2.name />
        <platform.specific.argument.2.value />
        <platform.specific.argument.3.name />
        <platform.specific.argument.3.value />
        <platform.specific.argument.4.name />
        <platform.specific.argument.4.value />
    </properties>
    <profiles>
        <profile>
            <id>gdd-package-unix</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <platform.specific.toggle.1>--linux-shortcut</platform.specific.toggle.1>
                
                <platform.specific.argument.1.name>--linux-deb-maintainer</platform.specific.argument.1.name>
                <platform.specific.argument.1.value>${maintainer}</platform.specific.argument.1.value>
                <platform.specific.argument.2.name>--linux-menu-group</platform.specific.argument.2.name>
                <platform.specific.argument.2.value>Network;Utility;FileTransfer</platform.specific.argument.2.value>
                <platform.specific.argument.3.name>--linux-app-category</platform.specific.argument.3.name>
                <platform.specific.argument.3.value>web</platform.specific.argument.3.value>
            </properties>
        </profile>
        <profile>
            <id>gdd-package-windows</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <platform.specific.name>${project.name}</platform.specific.name>
                
                <platform.specific.toggle.1>--win-console</platform.specific.toggle.1>
                <platform.specific.toggle.2>--win-dir-chooser</platform.specific.toggle.2>
                <platform.specific.toggle.3>--win-menu</platform.specific.toggle.3>
                <platform.specific.toggle.4>--win-per-user-install</platform.specific.toggle.4>
                <platform.specific.toggle.5>--win-shortcut</platform.specific.toggle.5>
                <platform.specific.toggle.6>--win-shortcut-prompt</platform.specific.toggle.6>
                
                <platform.specific.argument.1.name>--win-help-url</platform.specific.argument.1.name>
                <platform.specific.argument.1.value>${project.url}</platform.specific.argument.1.value>
                <platform.specific.argument.2.name>--win-menu-group</platform.specific.argument.2.name>
                <platform.specific.argument.2.value>GDD</platform.specific.argument.2.value>
                <platform.specific.argument.3.name>--win-update-url</platform.specific.argument.3.name>
                <platform.specific.argument.3.value>${project.url}/releases</platform.specific.argument.3.value>
                <platform.specific.argument.4.name>--win-upgrade-uuid</platform.specific.argument.4.name>
                <platform.specific.argument.4.value>${package.id}</platform.specific.argument.4.value>
            </properties>
        </profile>
    </profiles>
    
    <dependencies>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10</version>
        </dependency>
    </dependencies>
    
    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            <Implementation-Time>${maven.build.timestamp}</Implementation-Time>
                            <Main-Class>lt.samerdokas.gdd.batch.Main</Main-Class>
                        </manifestEntries>
                    </archive>
                    <outputDirectory>${project.build.directory}/jar</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <artifactItems>
                        <artifactItem>
                            <groupId>${project.groupId}</groupId>
                            <artifactId>${project.artifactId}</artifactId>
                            <version>${project.version}</version>
                            <type>jar</type>
                            <overWrite>false</overWrite>
                        </artifactItem>
                        <artifactItem>
                            <groupId>com.google.code.gson</groupId>
                            <artifactId>gson</artifactId>
                            <version>2.10</version>
                            <type>jar</type>
                            <overWrite>false</overWrite>
                        </artifactItem>
                    </artifactItems>
                    <outputDirectory>${project.build.directory}/prepackage</outputDirectory>
                    <overWriteReleases>false</overWriteReleases>
                    <overWriteSnapshots>true</overWriteSnapshots>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <executable>jpackage</executable>
                    <workingDirectory>${project.build.directory}</workingDirectory>
                    <arguments>
                        <argument>--app-version</argument>
                        <argument>${project.version}</argument>
                        <argument>--copyright</argument>
                        <argument>Copyright (C) 2022 ${vendor}</argument>
                        <argument>--description</argument>
                        <argument>${project.name}</argument>
                        <argument>--name</argument>
                        <argument>${platform.specific.name}</argument>
                        <argument>--dest</argument>
                        <argument>./package/</argument>
                        <argument>--vendor</argument>
                        <argument>${vendor}</argument>
                        <argument>--add-modules</argument>
                        <argument>lt.samerdokas.gdd.batch,com.google.gson,jdk.crypto.ec</argument>
                        <argument>--module-path</argument>
                        <argument>./prepackage/</argument>
                        <argument>--input</argument>
                        <argument>./prepackage/</argument>
                        <argument>--main-jar</argument>
                        <argument>${project.build.finalName}.jar</argument>
                        <argument>--about-url</argument>
                        <argument>${project.url}</argument>
                        <argument>--license-file</argument>
                        <argument>${project.basedir}/LICENSE</argument>
                        <argument>${platform.specific.toggle.1}</argument>
                        <argument>${platform.specific.toggle.2}</argument>
                        <argument>${platform.specific.toggle.3}</argument>
                        <argument>${platform.specific.toggle.4}</argument>
                        <argument>${platform.specific.toggle.5}</argument>
                        <argument>${platform.specific.toggle.6}</argument>
                        <argument>${platform.specific.argument.1.name}</argument>
                        <argument>${platform.specific.argument.1.value}</argument>
                        <argument>${platform.specific.argument.2.name}</argument>
                        <argument>${platform.specific.argument.2.value}</argument>
                        <argument>${platform.specific.argument.3.name}</argument>
                        <argument>${platform.specific.argument.3.value}</argument>
                        <argument>${platform.specific.argument.4.name}</argument>
                        <argument>${platform.specific.argument.4.value}</argument>
                    </arguments>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
